--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>calculadora javascript</h1>
- <input type="number"> 
+<input type="number" id="valor1" placeholder="Digite o 1º número" />
+  <input type="number" id="valor2" placeholder="Digite o 2º número" /> 
 </body>
 </html>
