--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <title>calculadora</title>
 </head>
 <body>
+
 <h1>calculadora javascript</h1>
+
+
 <input type="number" id="valor1" placeholder="Digite o 1º número" />
   <input type="number" id="valor2" placeholder="Digite o 2º número" /> 
   <select name="" id="operacao">
+
+
     <option value="+".>soma(+)</option>
     <option value="">subtração(-)</option>
     <option value="">multiplicação(*)</option>
     <option value="">divisão(/)</option>
   </select>
+  <button onclick="calcular()">calcular</button>
+  <div id="resultado"></div>
+  <script src="script.js"></script>
+  
 </body>
 </html>
